[gd_scene load_steps=17 format=3 uid="uid://bhuwtv3rysx8d"]

[ext_resource type="Script" uid="uid://sgrrjc7idout" path="res://menu/IGM.gd" id="1_fvgyu"]
[ext_resource type="Texture2D" uid="uid://brlgnlkdbktxn" path="res://menu/appearance/corner2.png" id="2_ysq8w"]
[ext_resource type="Script" uid="uid://bhtsyp1mik5hk" path="res://menu/bones/scripts/corner_2.gd" id="3_gc380"]
[ext_resource type="Texture2D" uid="uid://d3b5sd2kp8pvk" path="res://menu/appearance/line.png" id="4_2fdsi"]
[ext_resource type="Script" uid="uid://qtsul8auo0s8" path="res://menu/bones/scripts/line.gd" id="5_dive8"]
[ext_resource type="Shader" uid="uid://nke4lrv0b6jy" path="res://menu/shaders/circleshadow.gdshader" id="5_rh2s5"]
[ext_resource type="Script" uid="uid://bk2ptiby6yifv" path="res://menu/shaders/shadowShader.gd" id="6_dive8"]
[ext_resource type="Shader" uid="uid://d1gh5mkkm2bf" path="res://menu/shaders/in_game_menu.gdshader" id="6_gc380"]
[ext_resource type="Script" uid="uid://bymlyff1hnrmt" path="res://menu/shaders/background.gd" id="7_2fdsi"]
[ext_resource type="Shader" uid="uid://ib4f3kunlqtx" path="res://menu/shaders/start.gdshader" id="7_tjrsr"]
[ext_resource type="Script" uid="uid://cvgmlybgvit8t" path="res://menu/shaders/ShadowOnStart.gd" id="8_tbluo"]
[ext_resource type="Texture2D" uid="uid://3dd4hkuowy5l" path="res://menu/icon_holder.png" id="9_jwss6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2fdsi"]
shader = ExtResource("6_gc380")
shader_parameter/u_active = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rh2s5"]
shader = ExtResource("6_gc380")
shader_parameter/u_active = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f3bsw"]
shader = ExtResource("5_rh2s5")
shader_parameter/value = 1.0
shader_parameter/u_active = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nult5"]
shader = ExtResource("7_tjrsr")
shader_parameter/value = 1.0

[node name="InGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_fvgyu")

[node name="Menu" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(585, 298)

[node name="background" type="ColorRect" parent="Menu"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_2fdsi")
script = ExtResource("7_2fdsi")

[node name="ProgressBar" type="TextureProgressBar" parent="Menu/background"]
material = SubResource("ShaderMaterial_rh2s5")
layout_mode = 0
offset_left = 476.0
offset_top = 14.0
offset_right = 726.0
offset_bottom = 43.485

[node name="RichTextLabel" type="RichTextLabel" parent="Menu"]
offset_right = 561.0
offset_bottom = 33.0
text = "test"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Corner1" type="Sprite2D" parent="Menu"]
unique_name_in_owner = true
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_ysq8w")
offset = Vector2(363, 363)
script = ExtResource("3_gc380")

[node name="anchor" type="Marker2D" parent="Menu/Corner1"]
position = Vector2(847, 0)

[node name="anchor2" type="Marker2D" parent="Menu/Corner1"]
position = Vector2(0, 847)

[node name="Corner2" type="Sprite2D" parent="Menu"]
unique_name_in_owner = true
rotation = 1.57079
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_ysq8w")
offset = Vector2(363, 363)
script = ExtResource("3_gc380")

[node name="anchor" type="Marker2D" parent="Menu/Corner2"]
position = Vector2(847, 0)

[node name="anchor2" type="Marker2D" parent="Menu/Corner2"]
position = Vector2(0, 847)

[node name="Corner3" type="Sprite2D" parent="Menu"]
unique_name_in_owner = true
rotation = 3.14159
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_ysq8w")
offset = Vector2(363, 363)
script = ExtResource("3_gc380")

[node name="anchor" type="Marker2D" parent="Menu/Corner3"]
position = Vector2(847, 0)

[node name="anchor2" type="Marker2D" parent="Menu/Corner3"]
position = Vector2(0, 847)

[node name="Corner4" type="Sprite2D" parent="Menu"]
unique_name_in_owner = true
rotation = 4.71238
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_ysq8w")
offset = Vector2(363, 363)
script = ExtResource("3_gc380")

[node name="anchor" type="Marker2D" parent="Menu/Corner4"]
position = Vector2(847, 0)

[node name="anchor2" type="Marker2D" parent="Menu/Corner4"]
position = Vector2(0, 847)

[node name="Line1" type="Sprite2D" parent="Menu"]
unique_name_in_owner = true
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_2fdsi")
script = ExtResource("5_dive8")

[node name="anchor" type="Marker2D" parent="Menu/Line1"]
position = Vector2(121, -0.000244558)

[node name="anchor2" type="Marker2D" parent="Menu/Line1"]
position = Vector2(-121, 0)

[node name="Line2" type="Sprite2D" parent="Menu"]
unique_name_in_owner = true
rotation = 1.57079
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_2fdsi")
script = ExtResource("5_dive8")

[node name="anchor" type="Marker2D" parent="Menu/Line2"]
position = Vector2(121, -0.000244558)

[node name="anchor2" type="Marker2D" parent="Menu/Line2"]
position = Vector2(-121, 0)

[node name="Line3" type="Sprite2D" parent="Menu"]
unique_name_in_owner = true
rotation = 3.14159
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_2fdsi")
script = ExtResource("5_dive8")

[node name="anchor" type="Marker2D" parent="Menu/Line3"]
position = Vector2(121, -0.000244558)

[node name="anchor2" type="Marker2D" parent="Menu/Line3"]
position = Vector2(-121, 0)

[node name="Line4" type="Sprite2D" parent="Menu"]
unique_name_in_owner = true
rotation = -1.57079
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_2fdsi")
script = ExtResource("5_dive8")

[node name="anchor" type="Marker2D" parent="Menu/Line4"]
position = Vector2(121, -0.000244558)

[node name="anchor2" type="Marker2D" parent="Menu/Line4"]
position = Vector2(-121, 0)

[node name="CircleShadow" type="ColorRect" parent="."]
unique_name_in_owner = true
light_mask = 2
visibility_layer = 2
material = SubResource("ShaderMaterial_f3bsw")
layout_mode = 0
script = ExtResource("6_dive8")

[node name="ShadowOnStart" type="ColorRect" parent="."]
light_mask = 2
visibility_layer = 2
material = SubResource("ShaderMaterial_nult5")
layout_mode = 0
offset_right = 124.0
offset_bottom = 206.0
script = ExtResource("8_tbluo")

[node name="IconHolder" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(335, 326)
texture = ExtResource("9_jwss6")
